docs: record transformer runtime benchmarks